# IronBook

./: .editorconfig  .gitignore  .golangci.yml  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum
.github/workflows/: ci.yml
apps/admission-webhook/: Dockerfile  main.go
apps/admission-webhook/policy/: policy.go  policy_test.go
apps/benchmark-operator/: AGENTS.md  Makefile  PROJECT  README.md  go.mod
apps/benchmark-operator/cmd/: main.go
apps/benchmark-operator/hack/: boilerplate.go.txt
apps/bot-coordinator/: Dockerfile  main.go
apps/bot-coordinator/coordinator/: dispatcher.go  dispatcher_test.go  schedule.go  schedule_test.go
apps/build-runner/: Dockerfile  main.go
apps/build-runner/builder/: builder.go  compile.go
apps/build-runner/config/: config.go
apps/fairness-gateway/: Dockerfile  main.go
apps/fairness-gateway/config/: config.go
apps/fairness-gateway/gateway/: fork.go  fork_test.go  identity.go  server.go  sink_file.go  stamper.go  stamper_test.go
apps/fairness-gateway/transport/: ws.go
apps/submission-api/: Dockerfile  main.go
apps/submission-api/config/: config.go
apps/submission-api/dispatcher/: dispatcher.go
apps/submission-api/integration/: upload_test.go
apps/submission-api/repo/: minio.go  postgres.go
crates/bot-worker/: Cargo.toml
crates/ironbookctl/: Cargo.toml
crates/matching-engine/: Cargo.toml
crates/matching-engine/benches/: throughput.rs
crates/matching-engine/src/: book.rs  lib.rs  match_engine.rs  snapshot.rs  types.rs
crates/matching-engine/tests/: basic.rs  proptest.proptest-regressions  proptest.rs  snapshot.rs
crates/proto/: Cargo.toml
crates/reference-oracle/: Cargo.toml  Dockerfile
crates/reference-oracle/src/: lib.rs  main.rs
crates/reference-oracle/tests/: integration.rs
crates/telemetry-sidecar/: Cargo.toml
crates/time-service/: Cargo.toml
crates/time-service/src/: lib.rs  main.rs
deploy/runtimeclasses/: gvisor.yaml
deploy/terraform/: README.md
docs/adr/: 001-gvisor-not-firecracker.md  011-single-cluster-deployment-multi-region-as-iac.md  012-defer-cosign-trivy-slsa-to-phase-4.md
docs/runbooks/: 02-single-cluster-bringup.md  06-gvisor-activation-on-linux.md
frontend/app/: page.tsx
pkg/miniclient/: client.go
pkg/postgresclient/: client.go
proto/: buf.yaml
tools/kindcluster/: down.sh  kind-config.yaml  up.sh
(+132 files in other folders)
