[workspace]
members = [
    "crates/matching-engine",
    "crates/ironbookctl",
    "crates/proto",
    "crates/time-service",
    "crates/reference-oracle",
    "crates/bot-worker",
    "crates/telemetry-sidecar",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
thiserror    = "2"
proptest     = "1"

[workspace.lints.rust]
unsafe_code  = "forbid"

[workspace.lints.clippy]
pedantic     = { level = "warn", priority = -1 }
unwrap_used  = "warn"
expect_used  = "warn"
