[package]
name              = "reference-oracle"
version           = "0.0.1"
edition.workspace = true
license.workspace = true

[lib]
name = "reference_oracle"
path = "src/lib.rs"

[[bin]]
name = "reference-oracle"
path = "src/main.rs"

[dependencies]
tokio           = { workspace = true }
tonic           = { version = "0.14", features = ["transport", "server", "channel"] }
prost           = "0.14"
ironbook-proto  = { path = "../proto" }
matching-engine = { path = "../matching-engine" }
parking_lot     = "0.12"
anyhow          = { workspace = true }

[dev-dependencies]
tokio        = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }

[lints]
workspace = true
